--- a/views/app/home.hbs
+++ b/views/app/home.hbs
@@ -1,1 +1,4 @@
-<h1> hello </h1>
+<h1> Fruit Fight </h1>
+<form action="/fruit" method="GET" class="begin-form">
+    <button type="submit">Begin</button>
+</form>
