make patch route and controller for updating a fruit score

--- a/views/fruit/fight.hbs
+++ b/views/fruit/fight.hbs
@@ -1,5 +1,9 @@
+<h1>click your favorite</h1>
 {{#each fruits}}
-    <div class="card">
-        <h1>{{ name }}</h1>
-    </div>
+    <form method="POST" action="/fruit/{{ id }}?_method=PATCH" class="fruit-form">
+        <div class="card">
+            <img src="{{ url }}">
+            <input type="submit" value='{{ name }}' class='fruit-button'>
+        </div>
+    </form>
 {{/each}}
