make route and controller for leaderboard

--- a/views/fruit/fight.hbs
+++ b/views/fruit/fight.hbs
@@ -7,3 +7,8 @@
         </div>
     </form>
 {{/each}}
+
+
+<form method="GET" action="/leaderboard" class="leaderboard-form">
+    <input type="submit" value="View Leaderboard" class="leaderboard-button">
+</form>
