style home page and fruit fight page

--- a/views/app/home.hbs
+++ b/views/app/home.hbs
@@ -1,4 +1,6 @@
-<h1> Fruit Fight </h1>
-<form action="/fruit" method="GET" class="begin-form">
-    <button type="submit">Begin</button>
-</form>
+<main>   
+    <h1> Fruit Fight </h1>
+    <form action="/fruit" method="GET" class="begin-form">
+        <button type="submit">Begin</button>
+    </form>
+</main>
