--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fruit Fight</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
+    {{#if fruits}}
+    <link rel="stylesheet" href="fight.css">
+    {{/if}}
 </head>
 <body>
     {{{ body }}}
