--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,9 @@
     {{#if fruits}}
     <link rel="stylesheet" href="fight.css">
     {{/if}}
+    {{#if results}}
+    <link rel="stylesheet" href="leaderboard.css">
+    {{/if}}
 </head>
 <body>
     {{{ body }}}
