--- a/views/app/leaderboard.hbs
+++ b/views/app/leaderboard.hbs
@@ -23,8 +23,9 @@
                         <textarea name="comment[fruit]" cols="30" rows="2" placeholder="Any missing fruits?"></textarea>
                     </p>
                     <p class="input-field">
-                        <textarea name="comment[contnet]" cols="30" rows="10" placeholder="Other comments"></textarea>
+                        <textarea name="comment[content]" cols="30" rows="10" placeholder="Other comments"></textarea>
                     </p>
+                    <input type="submit" value="Submit">
                 </form>
             </div>
         </div>
