--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,6 +13,9 @@
     {{#if results}}
     <link rel="stylesheet" href="leaderboard.css">
     {{/if}}
+    {{#if comment}}
+    <link rel="stylesheet" href="comment.css">
+    {{/if}}
 </head>
 <body>
     {{{ body }}}
