more styling to the home and fight page

--- a/views/app/leaderboard.hbs
+++ b/views/app/leaderboard.hbs
@@ -12,6 +12,11 @@
         </div>
     </div>
     <div class="right">
+        <nav>
+            <form method="GET" action="/" class="home-form">
+                <input type="submit" value="Home">
+            </form>
+        </nav>
         <div class="comments-container">
             <div class="form-container">
                 <h1>Comments?</h1>
