--- a/views/fruit/fight.hbs
+++ b/views/fruit/fight.hbs
@@ -12,7 +12,7 @@
             <form method="POST" action="/fruit/{{ id }}?_method=PATCH" class="fruit-form">
                 <div class="card">
                     <button type="submit" class='fruit-button'><img src="{{ url }}"></button>
-                    <h2>{{ name }}</h2>
+                    <button type="submit" class='fruit-button'><h2>{{ name }}</h2></button>
                 </div>
             </form>
         {{/each}}
