--- a/public/fight.css
+++ b/public/fight.css
@@ -10,7 +10,7 @@ nav {
     width: 100%;
     display: flex;
     justify-content: flex-end;
-    margin-bottom: 14vh;
+    margin: 20px 20px 14vh 0;
 }
 
 nav * {
@@ -29,6 +29,8 @@ h1 {
 }
 
 .card {
+    height: 500px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -38,7 +40,6 @@ h1 {
 img {
     width: 200px;
     height: 200px;
-    margin: 4vh;
 }
 
 input {
