--- a/public/main.css
+++ b/public/main.css
@@ -1,6 +1,14 @@
+form *, form {
+    cursor: pointer;
+}
+
+button:focus, input:focus {
+    outline:none !important;
+}
+
 body {
     margin: 0;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Nunito', sans-serif;
     background-color: #47ce09;
     color: white;
 }
