--- a/public/main.css
+++ b/public/main.css
@@ -9,7 +9,7 @@ button:focus, input:focus {
 body {
     margin: 0;
     font-family: 'Nunito', sans-serif;
-    background-color: #47ce09;
+    background-color: #01DF3A;
     color: white;
 }
 
@@ -27,8 +27,8 @@ main h1 {
 
 button {
     border: none;
-    font-family: 'Raleway', sans-serif;
-    background-color: #47ce09;
+    font-family: 'Nunito', sans-serif;
+    background-color: #01DF3A;
     color: white;
     font-size: 1.8em;
 }
