style leaderboard page

--- a/public/leaderboard.css
+++ b/public/leaderboard.css
@@ -3,12 +3,14 @@
     height: 100vh;
     display: flex;
     justify-content: flex-start;
+    overflow: hidden;
 }
 
 .left {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .title-container {
@@ -18,13 +20,26 @@
 
 h1 {
     font-size: 4em;
+    text-align: center;
 }
 
 .leaderboard-container {
-    width: 50vw;
-    height: 80vh;
+    width: 100%;
+    overflow: auto;
+    height: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: none;
+}
+
+.leaderboard-container::-webkit-scrollbar {
+    display: none !important;
+}
+
+ol {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 li {
@@ -32,7 +47,39 @@ li {
     font-size: 2em;
 }
 
+.space {
+    height: 30vh;
+}
+
+nav {
+    height: 20vh;
+    width: 10vw;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+
 .comments-container {
     height: 100vh;
-    width: 50vw;
+    width: 40vw;
+}
+
+.comment-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+input {
+    border: none;
+    font-family: 'Nunito', sans-serif;
+    background-color: #01DF3A;
+    color: white;
+    font-size: 1.6em;
+    margin: 20px;
+}
+
+input:hover {
+    font-weight: bold;
 }
