--- a/views/app/leaderboard.hbs
+++ b/views/app/leaderboard.hbs
@@ -9,14 +9,10 @@
                 <li>{{ name }}</li>
                 {{/each}}
             </ol>
+            <div class="space"></div>
         </div>
     </div>
     <div class="right">
-        <nav>
-            <form method="GET" action="/" class="home-form">
-                <input type="submit" value="Home">
-            </form>
-        </nav>
         <div class="comments-container">
             <div class="form-container">
                 <h1>Comments?</h1>
@@ -35,4 +31,9 @@
             </div>
         </div>
     </div>
+    <nav>
+        <form method="GET" action="/" class="home-form">
+            <input type="submit" value="Home">
+        </form>
+    </nav>
 </section>
