--- a/views/fruit/fight.hbs
+++ b/views/fruit/fight.hbs
@@ -5,7 +5,7 @@
         </form>
     </nav>
 
-    <h1>click your favorite</h1>
+    <h1 class="instructions">click your favorite</h1>
 
     <div class="fruit-container">
         <form method="POST" action="/fruit/{{ fruits.0.id }}/{{ fruits.1.id }}?_method=PATCH" class="fruit-form">
