add media query styling

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,7 @@
     <title>Fruit Fight</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="mediaquery.css">
     {{#if fruits}}
     <link rel="stylesheet" href="fight.css">
     {{/if}}
