--- a/public/mediaquery.css
+++ b/public/mediaquery.css
@@ -8,6 +8,11 @@
         height: 100px !important;
     }
 
+    .card {
+        width: 150px !important;
+        height: 220px !important;
+    }
+
     img {
         width: 100px !important;
         height: 100px !important;
