--- a/public/leaderboard.css
+++ b/public/leaderboard.css
@@ -3,7 +3,6 @@
     height: 100vh;
     display: flex;
     justify-content: flex-start;
-    overflow: hidden;
 }
 
 .left {
@@ -43,6 +42,7 @@ ol {
 }
 
 li {
+    width: 50%;
     margin: 10px;
     font-size: 2em;
 }
