--- a/views/app/home.hbs
+++ b/views/app/home.hbs
@@ -1,5 +1,5 @@
 <main>   
-    <h1> Fruit Fight </h1>
+    <h1 class="main-title"> Fruit Fight </h1>
     <form action="/fruit" method="GET" class="begin-form">
         <button type="submit">Begin</button>
     </form>
