--- a/views/app/leaderboard.hbs
+++ b/views/app/leaderboard.hbs
@@ -23,14 +23,14 @@
                     <p class="input-field">
                         <textarea name="comment[content]" cols="30" rows="10" placeholder="Other comments"></textarea>
                     </p>
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Submit" class="button">
                 </form>
             </div>
         </div>
     </div>
     <nav>
         <form method="GET" action="/" class="home-form">
-            <input type="submit" value="Home">
+            <input type="submit" value="Home" class="button">
         </form>
     </nav>
 </section>
