--- a/public/fight.css
+++ b/public/fight.css
@@ -1,9 +1,7 @@
 .fight {
-    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;  
+    justify-content: center;
 }
 
 nav {
@@ -17,8 +15,9 @@ nav * {
     font-size: .9em;
 }
 
-h1 {
-    font-size: 4em;
+.instruct {
+    margin: 0 0 25px 0;
+    text-align: center;
 }
 
 .fruit-container {
@@ -29,17 +28,20 @@ h1 {
 }
 
 .card {
-    height: 500px;
+    border: 1px solid #01DF3A;
+    border-radius: 25px;
     width: 300px;
+    height: 375px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
+    margin: 0 20px;
 }
 
 img {
-    width: 250px;
-    height: 250px;
+    width: 230px;
+    height: 230px;
     overflow: hidden;
 }
 
@@ -56,6 +58,6 @@ input:hover {
 }
 
 img:hover {
-    width: 260px !important;
-    height: 260px !important;
+    width: 250px !important;
+    height: 250px !important;
 }
