--- a/views/app/home.hbs
+++ b/views/app/home.hbs
@@ -1,6 +1,6 @@
 <main>   
     <h1> Fruit Fight </h1>
     <form action="/fruit" method="GET" class="begin-form">
-        <button type="submit">Begin</button>
+        <button type="submit" class="button">Begin</button>
     </form>
 </main>
