update overall site style and upload fruit images

--- a/public/leaderboard.css
+++ b/public/leaderboard.css
@@ -66,8 +66,7 @@ nav {
 
 input {
     border: none;
-    font-family: 'Nunito', sans-serif;
-    background-color: #01DF3A;
+    background-color: #ffb555;
     color: white;
     font-size: 1.6em;
     margin: 20px;
