--- a/public/fight.css
+++ b/public/fight.css
@@ -20,19 +20,28 @@ nav * {
 
 .instructions {
     font-size: 4em;
-    margin-bottom: 20vh;
+    margin-bottom: 10vh;
+    margin-top: 0;
+    font-weight: 200;
 }
 
 .fruit-container {
-    width: 100vw;
+    background-color: white; 
+    width: auto;
+    height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 2px solid black;
+}
+
+.fruit-form {
+    height: auto;
 }
 
 .card {
-    height: 500px;
-    width: 300px;
+    height: auto;
+    width: 350px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -47,10 +56,15 @@ img {
 
 input {
     border: none;
-    font-family: 'Nunito', sans-serif;
-    background-color: #01DF3A;
+    font-family: 'Pacifico', cursive;
+    background-color: #ffb555;
     color: white;
     font-size: 1.6em;
+}
+
+button {
+    background-color: white;
+    color: black;
 }
 
 input:hover {
